Falta por agregar acceso a otra data y hacer pruebas con gráficos

--- a/cpp_H_ZZ_4l_channel_analysis.ipynb
+++ b/cpp_H_ZZ_4l_channel_analysis.ipynb
@@ -26,7 +26,7 @@
     "#include <TChain.h> //01-cpp_Hyy //main_HZZAnalisis.c\n",
     "#include <TFile.h> //01-cpp_Hyy //main_HZZAnalisis.c\n",
     "\n",
-    "//#include <TProof.h> //main_HZZAnalisis.c\n",
+    "#include <TProof.h> //main_HZZAnalisis.c\n",
     "\n",
     "#include <vector> //01-cpp_Hyy\n",
     "#include <iostream> //01-cpp_Hyy //HZZAnalysisHistograms.h //HZZAnalysis.C\n",
@@ -35,12 +35,12 @@
     "\n",
     "#include <cstring> //HZZAnalysis.C\n",
     "\n",
-    "//#include <time.h>\n",
+    "#include <time.h>\n",
     "\n",
-    "//#include \"TSelector.h\"\n",
-    "#include \"TH1.h\" //HZZAnalysisHistograms.h //HZZAnalysis.C(aunque con <> OJO)\n",
-    "#include \"TH2.h\" //HZZAnalysisHistograms.h //HZZAnalysis.C(aunque con <> OJO)\n",
-    "#include \"TH3.h\" //HZZAnalysisHistograms.h\n",
+    "#include <TSelector.h>\n",
+    "#include <TH1.h> //HZZAnalysisHistograms.h //HZZAnalysis.C(aunque con <> OJO)\n",
+    "#include <TH2.h> //HZZAnalysisHistograms.h //HZZAnalysis.C(aunque con <> OJO)\n",
+    "#include <TH3.h> //HZZAnalysisHistograms.h\n",
     "#include <TStyle.h> //HZZAnalysis.C\n",
     "#include <TMath.h> //HZZAnalysis.C\n",
     "#include <TLorentzVector.h> //HZZAnalysis.C"
@@ -62,7 +62,7 @@
     "//void main_HZZAnalysis(int proof=0, int option=0)\n",
     "//{\n",
     "//    if (option==1 || option==0){ //SÓLO DATA\n",
-    "        TString path = \"home/student/Proyecto_de_grado/DATA/4lep/\";\n",
+    "        TString path = \"/home/student/HZZ4l/4lep/\";\n",
     "        TChain* fChain = new TChain(\"mini\");\n",
     "        fChain->AddFile(path+\"Data/data_A.4lep.root\");\n",
     "        fChain->AddFile(path+\"Data/data_B.4lep.root\");\n",
@@ -299,12 +299,352 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nEvents=0;\n"
+    "//string name;\n",
+    "\n",
+    "//void HZZAnalysis::Begin(TTree * )\n",
+    "//{\n",
+    "  \n",
+    "//nEvents=0;\n",
+    "\n",
+    "//}\n",
+    "\n",
+    "//void HZZAnalysis::SlaveBegin(TTree * )\n",
+    "//{\n",
+    "//  TString option = GetOption();\n",
+    "//  printf(\"Starting analysis with process option: %s \\n\", option.Data());\n",
+    "  \n",
+    "  //name=option;\n",
+    "  \n",
+    "  //define_histograms();\n",
+    "  \n",
+    "  //FillOutputList();\n",
+    "//}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total # events = 832. Events to run = 832 corresponding to 100% of total events!\n"
+     ]
+    }
+   ],
+   "source": [
+    "int nEvents, nbytes, i;\n",
+    "nEvents = (Int_t)fChain->GetEntries();\n",
+    "\n",
+    "// IMPORTANT: fraction events we want to run\n",
+    "fraction_events = 1;\n",
+    "events_to_run = nEvents*fraction_events;\n",
+    "\n",
+    "std::cout << \"Total # events = \"  << nEvents\n",
+    "          << \". Events to run = \" << events_to_run\n",
+    "          << \" corresponding to \" << fraction_events*100\n",
+    "          << \"% of total events!\" << std::endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Bool_t HZZAnalysis::Process(Long64_t entry)\n",
+    "//{\n",
+    "//fChain->(Int_t)Tree()->GetEntry(entry);\n",
+    "//nEvents++;\n",
+    "//  std::cout << \"Analysed a total of: \" << nEvents << \" events out of \" << fChain->GetTree()->GetEntries() << \" in this sample\" << std::endl;\n",
+    "  \n",
+    "//if(fChain->GetTree()->GetEntries()>0)\n",
+    "    //{\n",
+    "      // **********************************************************************************************//\n",
+    "      // Begin analysis selection, largely based on: ATLAS Collaboration, JHEP 10 (2017) 132           //\n",
+    "      // **********************************************************************************************//\n",
+    "      \n",
+    "      //Scale factors\n",
+    "      Float_t scaleFactor = scaleFactor_ELE*scaleFactor_MUON*scaleFactor_LepTRIGGER*scaleFactor_PILEUP;\n",
+    "      \n",
+    "      //MC weight\n",
+    "      Float_t m_mcWeight = mcWeight;\n",
+    "      \n",
+    "      // read input option\n",
+    "      //TString option = GetOption();\n",
+    "      //if(option.Contains(\"single\")) {\n",
+    "      //m_mcWeight = (mcWeight/TMath::Abs(mcWeight));\n",
+    "      //} // set to 1 or -1 for single top MCs\n",
+    "      \n",
+    "      //Total weight\n",
+    "      Float_t weight = scaleFactor*m_mcWeight;\n",
+    "      \n",
+    "      // Make difference between data and MC\n",
+    "      //if(option.Contains(\"data\")) {  \n",
+    "      weight = 1.;\n",
+    "      //}\n",
+    "      \n",
+    "      //Preselection cut for electron/muon trigger\n",
+    "      if(trigE || trigM)\n",
+    "\t{\n",
+    "\t  \n",
+    "\t  // Preselection of good leptons\n",
+    "\t  int goodlep_index[lep_n];\n",
+    "\t  int goodlep_n = 0;\n",
+    "\t  int lep_index =0;\n",
+    "\t  \n",
+    "\t  for(unsigned int i=0; i<lep_n; i++)\n",
+    "\t    {\n",
+    "              TLorentzVector leptemp;  leptemp.SetPtEtaPhiE(lep_pt->at(i)/1000., lep_eta->at(i), lep_phi->at(i), lep_E->at(i)/1000.);\n",
+    "\t      \n",
+    "              // loosely isolated and very soft \n",
+    "\t      if( lep_pt->at(i) > 5000. && TMath::Abs(lep_eta->at(i)) < 2.5 && ( (lep_ptcone30->at(i)/lep_pt->at(i)) < 0.3) && ( (lep_etcone20->at(i) / lep_pt->at(i)) < 0.3 ) ) {\n",
+    "\t\t// electron\n",
+    "\t\tif ( lep_type->at(i) == 11 && lep_pt->at(i) > 7000. && TMath::Abs(lep_eta->at(i)) <2.47 ) {\n",
+    "\t\t  if( TMath::Abs(lep_trackd0pvunbiased->at(i))/lep_tracksigd0pvunbiased->at(i) < 5 && TMath::Abs(lep_z0->at(i)*TMath::Sin(leptemp.Theta())) < 0.5) {\n",
+    "\t\t    goodlep_n = goodlep_n + 1;\n",
+    "\t\t    goodlep_index[lep_index] = i;\n",
+    "\t\t    lep_index++;\n",
+    "\t\t  }\n",
+    "\t\t}\n",
+    "\t\t//muon\n",
+    "\t\tif ( lep_type->at(i) == 13) {\n",
+    "\t\t  if( TMath::Abs(lep_trackd0pvunbiased->at(i))/lep_tracksigd0pvunbiased->at(i) < 3 && TMath::Abs(lep_z0->at(i)*TMath::Sin(leptemp.Theta())) < 0.5) {\n",
+    "\t\t    goodlep_n = goodlep_n + 1;\n",
+    "\t\t    goodlep_index[lep_index] = i;\n",
+    "\t\t    lep_index++;\n",
+    "\t\t  }\n",
+    "\t\t}\n",
+    "\t      }\n",
+    "\t    }\n",
+    "\t  \n",
+    "\t  \n",
+    "\t  //Exactly four good leptons\n",
+    "\t  if(goodlep_n == 4 )\n",
+    "\t    {\n",
+    "\t      \n",
+    "\t      int goodlep1_index = goodlep_index[0];\n",
+    "\t      int goodlep2_index = goodlep_index[1];\n",
+    "\t      int goodlep3_index = goodlep_index[2];\n",
+    "\t      int goodlep4_index = goodlep_index[3];\n",
+    "\t      \n",
+    "\t      //first lepton pT > 25 GeV, second > 15 GeV and third > 10 GeV\t\t      \n",
+    "\t      if (lep_pt->at(goodlep1_index) > 25000. && lep_pt->at(goodlep2_index) > 15000. && lep_pt->at(goodlep3_index) > 10000. ) \n",
+    "\t\t{ \t\t     \n",
+    "\t\t  \n",
+    "\t\t  \n",
+    "\t\t  // TLorentzVector definitions\n",
+    "\t\t  TLorentzVector Lepton_1  = TLorentzVector();\n",
+    "\t\t  TLorentzVector Lepton_2  = TLorentzVector();\n",
+    "\t\t  TLorentzVector Lepton_3  = TLorentzVector();\n",
+    "\t\t  TLorentzVector Lepton_4  = TLorentzVector();\n",
+    "\t\t  \n",
+    "\t\t  Lepton_1.SetPtEtaPhiE(lep_pt->at(goodlep1_index), lep_eta->at(goodlep1_index), lep_phi->at(goodlep1_index),lep_E->at(goodlep1_index));\n",
+    "\t\t  Lepton_2.SetPtEtaPhiE(lep_pt->at(goodlep2_index), lep_eta->at(goodlep2_index), lep_phi->at(goodlep2_index),lep_E->at(goodlep2_index));\n",
+    "\t\t  Lepton_3.SetPtEtaPhiE(lep_pt->at(goodlep3_index), lep_eta->at(goodlep3_index), lep_phi->at(goodlep3_index),lep_E->at(goodlep3_index));\n",
+    "\t\t  Lepton_4.SetPtEtaPhiE(lep_pt->at(goodlep4_index), lep_eta->at(goodlep4_index), lep_phi->at(goodlep4_index),lep_E->at(goodlep4_index));\n",
+    "\t\t  \n",
+    "\t\t  \n",
+    "\t\t  // minimisation of difference from the Z mass\n",
+    "\t\t  float delta_Z1=0; \n",
+    "\t\t  float delta_Z2=0; \n",
+    "\t\t  float InvMassZ1=0; \n",
+    "\t\t  float InvMassZ2=0;\n",
+    "\t\t  float delta_Z1_1=0; float delta_Z1_2=0; float delta_Z1_3=0;\n",
+    "\t\t  float delta_Z2_1=0; float delta_Z2_2=0; float delta_Z2_3=0;\n",
+    "\t\t  float InvMassZ1_1=0; float InvMassZ1_2=0; float InvMassZ1_3=0;\n",
+    "\t\t  float InvMassZ2_1=0; float InvMassZ2_2=0; float InvMassZ2_3=0;\n",
+    "\t\t  float sum_ZZ1=0; float sum_ZZ2=0; float sum_ZZ3=0;\n",
+    "\t\t  \n",
+    "\t\t  // final values\n",
+    "\t\t  float InvMassZ1_min=0; float InvMassZ2_min=0; float sum_ZZ_fin=0;\n",
+    "\t\t  \n",
+    "\t\t  \n",
+    "\t\t  float sum_charges = lep_charge->at(goodlep1_index) + lep_charge->at(goodlep2_index) + lep_charge->at(goodlep3_index) + lep_charge->at(goodlep4_index);\t\t\t \n",
+    "\t\t  \n",
+    "\t\t  // step-by-step\n",
+    "\t\t  // opposite charge leptons\n",
+    "\t\t  if ( sum_charges == 0  ) \n",
+    "\t\t    {\n",
+    "\t\t      \n",
+    "\t\t      \n",
+    "\t\t      int sum_types  = lep_type->at(goodlep1_index) + lep_type->at(goodlep2_index) + lep_type->at(goodlep3_index) + lep_type->at(goodlep4_index) ;\n",
+    "\t\t      \n",
+    "\t\t      // type e=11, mu=13\n",
+    "\t\t      // begin case e+e-e+e- or mu+mu-mu+mu-\n",
+    "\t\t      if ( sum_types == 44 || sum_types == 52  )\n",
+    "\t\t\t{\n",
+    "\t\t\t  if ( lep_type->at(goodlep1_index) == lep_type->at(goodlep2_index) && ( (lep_charge->at(goodlep1_index) * lep_charge->at(goodlep2_index)) < 0 )  )\n",
+    "\t\t\t    {\n",
+    "\t\t              InvMassZ1_1=(Lepton_1+Lepton_2).Mag()/1000.;\n",
+    "\t\t\t      InvMassZ2_1=(Lepton_3+Lepton_4).Mag()/1000.;\n",
+    "\t\t\t      delta_Z1_1 =  TMath::Abs(InvMassZ1_1 - 91.18); \n",
+    "\t\t\t      delta_Z2_1 =  TMath::Abs(InvMassZ2_1 - 91.18);\n",
+    "\t\t\t    }\n",
+    "\t\t\t  if ( lep_type->at(goodlep1_index) == lep_type->at(goodlep3_index)  && ( (lep_charge->at(goodlep1_index) * lep_charge->at(goodlep3_index)) < 0 ) )\n",
+    "\t\t\t    {\n",
+    "\t\t\t      InvMassZ1_2=(Lepton_1+Lepton_3).Mag()/1000.;\n",
+    "\t\t\t      InvMassZ2_2=(Lepton_2+Lepton_4).Mag()/1000.;\n",
+    "\t\t\t      delta_Z1_2 =  TMath::Abs(InvMassZ1_2 - 91.18); \n",
+    "\t\t\t      delta_Z2_2 =  TMath::Abs(InvMassZ2_2 - 91.18);\n",
+    "\t\t\t    }\n",
+    "\t\t\t  if ( lep_type->at(goodlep1_index) == lep_type->at(goodlep4_index)  && ( (lep_charge->at(goodlep1_index) * lep_charge->at(goodlep4_index)) < 0 ) )\n",
+    "\t\t\t    {\n",
+    "\t\t\t      InvMassZ1_3=(Lepton_1+Lepton_4).Mag()/1000.;\n",
+    "\t\t\t      InvMassZ2_3=(Lepton_2+Lepton_3).Mag()/1000.;\n",
+    "\t\t\t      delta_Z1_3 =  TMath::Abs(InvMassZ1_3 - 91.18); \n",
+    "\t\t\t      delta_Z2_3 =  TMath::Abs(InvMassZ2_3 - 91.18);\n",
+    "\t\t\t    }\n",
+    "\n",
+    "\t\t\t  if(delta_Z1_1 < delta_Z2_1) { InvMassZ1_min = InvMassZ1_1; InvMassZ2_min = InvMassZ2_1;}\n",
+    "                          if(delta_Z2_1 < delta_Z1_1) { InvMassZ1_min = InvMassZ2_1; InvMassZ2_min = InvMassZ1_1;}\n",
+    "\n",
+    "\t\t\t  if(delta_Z1_2 < delta_Z2_2) { InvMassZ1_min = InvMassZ1_2; InvMassZ2_min = InvMassZ2_2;}\n",
+    "                          if(delta_Z2_2 < delta_Z1_2) { InvMassZ1_min = InvMassZ2_2; InvMassZ2_min = InvMassZ1_2;}\n",
+    "\n",
+    "\t\t\t  if(delta_Z1_3 < delta_Z2_3) { InvMassZ1_min = InvMassZ1_3; InvMassZ2_min = InvMassZ2_3;}\n",
+    "                          if(delta_Z2_3 < delta_Z1_3) { InvMassZ1_min = InvMassZ2_3; InvMassZ2_min = InvMassZ1_3;}\n",
+    "\n",
+    "\t\t\t} // cases of eeee or mumumumu\n",
+    "\t\t      \n",
+    "\t\t      ////////////////////////////////////\n",
+    "\t\t      // case eemumu \n",
+    "\t\t      if ( sum_types == 48 )\n",
+    "\t\t\t{\n",
+    "\t\t\t  \n",
+    "\t\t\t  if ( lep_type->at(goodlep1_index) == lep_type->at(goodlep2_index)  && ( (lep_charge->at(goodlep1_index) * lep_charge->at(goodlep2_index)) < 0 ) )\n",
+    "\t\t\t    {\n",
+    "\t\t\t      InvMassZ1=(Lepton_1+Lepton_2).Mag()/1000.;\n",
+    "\t\t\t      InvMassZ2=(Lepton_3+Lepton_4).Mag()/1000.;\n",
+    "\t\t\t      delta_Z1 =  TMath::Abs(InvMassZ1 - 91.18); \n",
+    "\t\t\t      delta_Z2 =  TMath::Abs(InvMassZ2 - 91.18);\n",
+    "\t\t\t    }\n",
+    "\t\t\t  if ( lep_type->at(goodlep1_index) == lep_type->at(goodlep3_index)  && ( (lep_charge->at(goodlep1_index) * lep_charge->at(goodlep3_index)) < 0 ) )\n",
+    "\t\t\t    {\n",
+    "\t\t\t      InvMassZ1=(Lepton_1+Lepton_3).Mag()/1000.;\n",
+    "\t\t\t      InvMassZ2=(Lepton_2+Lepton_4).Mag()/1000.;\n",
+    "\t\t\t      delta_Z1 =  TMath::Abs(InvMassZ1 - 91.18); \n",
+    "\t\t\t      delta_Z2 =  TMath::Abs(InvMassZ2 - 91.18);\n",
+    "\t\t\t    }\n",
+    "\t\t\t  if ( lep_type->at(goodlep1_index) == lep_type->at(goodlep4_index)  && ( (lep_charge->at(goodlep1_index) * lep_charge->at(goodlep4_index)) < 0 ) )\n",
+    "\t\t\t    {\n",
+    "\t\t\t      InvMassZ1=(Lepton_1+Lepton_4).Mag()/1000.;\n",
+    "\t\t\t      InvMassZ2=(Lepton_2+Lepton_3).Mag()/1000.;\n",
+    "\t\t\t      delta_Z1 =  TMath::Abs(InvMassZ1 - 91.18); \n",
+    "\t\t\t      delta_Z2 =  TMath::Abs(InvMassZ2 - 91.18);\n",
+    "\t\t\t    }\n",
+    "\t\t\t  \n",
+    "\t\t\t  if(delta_Z1 < delta_Z2) { InvMassZ1_min = InvMassZ1; InvMassZ2_min = InvMassZ2;}\n",
+    "\t\t\t  if(delta_Z2 < delta_Z1) { InvMassZ1_min = InvMassZ2; InvMassZ2_min = InvMassZ1;}\n",
+    "\t\t\t} // eemumu overe\n",
+    "\t\t      \n",
+    "\t\t      if ( (sum_types == 44 || sum_types == 52 || sum_types == 48) )\n",
+    "\t\t\t{\n",
+    "\t\t\t  \n",
+    "\t\t\t  TLorentzVector FourLepSystem = TLorentzVector();\n",
+    "\t\t\t  FourLepSystem = Lepton_1 + Lepton_2 + Lepton_3 + Lepton_4;\n",
+    "\t\t\t  float FourLepSystem_M = FourLepSystem.Mag()/1000.;\n",
+    "\t\t\t  float FourLepSystem_pt = FourLepSystem.Pt()/1000.;\n",
+    "\t\t\t  float FourLepSystem_y = FourLepSystem.Rapidity();\n",
+    "\t\t\t \n",
+    "\n",
+    "                          //Preselection of good jets\n",
+    "\t\t\t  int goodjet_n = 0;\n",
+    "\t\t\t  int goodjet_index = 0;\n",
+    "\t\t\t\t  \n",
+    "\t\t\t  if (jet_n > 0)\n",
+    "\t\t\t    {\n",
+    "\t\t\t      for(unsigned int i=0; i<jet_n; i++)\n",
+    "\t\t\t\t{\n",
+    "\t\t\t\t  if(jet_pt->at(i) > 30000. && TMath::Abs(jet_eta->at(i)) < 4.4)\n",
+    "\t\t\t\t    {\n",
+    "\t\t\t\t      goodjet_n++;\n",
+    "\t\t\t\t      goodjet_index = i;\n",
+    "\t\t\t\t    }\n",
+    "\t\t\t\t}\n",
+    "\t\t\t    }\n",
+    "\n",
+    "\t\t\t  \n",
+    "\t\t\t  //Start to fill histograms : definitions of x-axis variables\n",
+    "\t\t\t  double names_of_global_variable[]={InvMassZ1_min, InvMassZ2_min, FourLepSystem_pt, FourLepSystem_y, FourLepSystem_M, FourLepSystem_M,  (double)goodjet_n };\n",
+    "\t\t\t  \n",
+    "\t\t\t  double names_of_leadlep_variable[]={Lepton_1.Pt()/1000., Lepton_1.Eta(), Lepton_1.E()/1000., Lepton_1.Phi(), (double)lep_charge->at(goodlep1_index), (double)lep_type->at(goodlep1_index)};\n",
+    "\t\t\t  \n",
+    "\t\t\t  double names_of_secondlep_variable[]={Lepton_2.Pt()/1000., Lepton_2.Eta(), Lepton_2.E()/1000., Lepton_2.Phi(), (double)lep_charge->at(goodlep2_index), (double)lep_type->at(goodlep2_index)};\n",
+    "\t\t\t  \n",
+    "\t\t\t  double names_of_thirdlep_variable[]={Lepton_3.Pt()/1000., Lepton_3.Eta(), Lepton_3.E()/1000., Lepton_3.Phi(), (double)lep_charge->at(goodlep3_index), (double)lep_type->at(goodlep3_index)};\n",
+    "\t\t\t  \n",
+    "\t\t\t  double names_of_fourlep_variable[]={Lepton_4.Pt()/1000., Lepton_4.Eta(), Lepton_4.E()/1000., Lepton_4.Phi(), (double)lep_charge->at(goodlep4_index), (double)lep_type->at(goodlep4_index)};\n",
+    "\t\t\t  \n",
+    "\t\t\t  \n",
+    "\t\t\t  //Start to fill histograms : definitions of histogram names\n",
+    "\t\t\t  TString histonames_of_global_variable[]={\"hist_mLL1\",\"hist_mLL2\",\"hist_fourlepsys_pt\",\"hist_fourlepsys_y\",\"mass_ext_four_lep\", \"mass_four_lep\", \"hist_n_jets\"};\n",
+    "\t\t\t  \n",
+    "\t\t\t  TString histonames_of_lep_variable[]={\"hist_fourleptpt\", \"hist_fourlepteta\", \"hist_fourleptE\", \"hist_fourleptphi\", \"hist_fourleptch\", \"hist_fourleptID\"};\n",
+    "\t\t\t  \n",
+    "\t\t\t  //Start to fill histograms : find the histogram array length\n",
+    "\t\t\t  int length_global    = sizeof(names_of_global_variable)/sizeof(names_of_global_variable[0]);\n",
+    "\t\t\t  int length_leadlep   = sizeof(names_of_leadlep_variable)/sizeof(names_of_leadlep_variable[0]);\n",
+    "\t\t\t  \n",
+    "\t\t\t  for (int i=0; i<length_global; i++)\n",
+    "\t\t\t    {\n",
+    "\t\t\t      FillHistogramsGlobal( names_of_global_variable[i], weight, histonames_of_global_variable[i]);\n",
+    "\t\t\t    }\n",
+    "\t\t\t  \n",
+    "\t\t\t  for (int i=0; i<length_leadlep; i++)\n",
+    "\t\t\t    {\n",
+    "\t\t\t      FillHistogramsLeadlept( names_of_leadlep_variable[i], weight, histonames_of_lep_variable[i]);\n",
+    "\t\t\t      FillHistogramsLeadlept( names_of_secondlep_variable[i], weight, histonames_of_lep_variable[i]);\n",
+    "\t\t\t      FillHistogramsLeadlept( names_of_thirdlep_variable[i], weight, histonames_of_lep_variable[i]);\n",
+    "\t\t\t      FillHistogramsLeadlept( names_of_fourlep_variable[i], weight, histonames_of_lep_variable[i]);\n",
+    "\t\t\t    }\n",
+    "\t\t\t  \n",
+    "\t\t\t}\n",
+    "\t\t    }\n",
+    "\t\t}\n",
+    "\t    }\n",
+    "\t}\n",
+    "//    }\n",
+    "  \n",
+    "//  return kTRUE;\n",
+    "//}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//void HZZAnalysis::SlaveTerminate()\n",
+    "//{\n",
+    "//}\n",
+    "\n",
+    "//void HZZAnalysis::Terminate()\n",
+    "//{\n",
+    "  // creating the output file\n",
+    "//  TString filename_option = GetOption();\n",
+    "//  printf(\"Writting with name option: %s \\n\", filename_option.Data());\n",
+    "//  TString output_name=\"Output_HZZAnalysis/\"+filename_option+\".root\";\n",
+    "//  const char* filename = output_name;\n",
+    " \n",
+    "//  TFile physicsoutput(filename,\"recreate\");\n",
+    "//  WriteHistograms();\n",
+    "//  physicsoutput.Close();\n",
+    "  \n",
+    "//}"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
