Sigo trabajando en plot y data de entrada

--- a/cpp_H_ZZ_4l_channel_analysis.ipynb
+++ b/cpp_H_ZZ_4l_channel_analysis.ipynb
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analisis. Antes de esto falta agregar el formato de los gráficos."
+    "Aún faltan varias cosas de plotting.cxx"
    ]
   },
   {
@@ -303,26 +303,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "//string name;\n",
-    "\n",
-    "//void HZZAnalysis::Begin(TTree * )\n",
-    "//{\n",
-    "  \n",
-    "//nEvents=0;\n",
-    "\n",
-    "//}\n",
-    "\n",
-    "//void HZZAnalysis::SlaveBegin(TTree * )\n",
-    "//{\n",
-    "//  TString option = GetOption();\n",
-    "//  printf(\"Starting analysis with process option: %s \\n\", option.Data());\n",
-    "  \n",
-    "  //name=option;\n",
-    "  \n",
-    "  //define_histograms();\n",
-    "  \n",
-    "  //FillOutputList();\n",
-    "//}"
+    "  TStyle *atlasStyle = new TStyle(\"ATLAS\",\"Atlas style\");\n",
+    "  Int_t icol=0; // WHITE\n",
+    "  atlasStyle->SetFrameBorderMode(icol);\n",
+    "  atlasStyle->SetFrameFillColor(icol);\n",
+    "  atlasStyle->SetCanvasBorderMode(icol);\n",
+    "  atlasStyle->SetCanvasColor(icol);\n",
+    "  atlasStyle->SetPadBorderMode(icol);\n",
+    "  atlasStyle->SetPadColor(icol);\n",
+    "  atlasStyle->SetStatColor(icol);\n",
+    "  atlasStyle->SetPaperSize(20,26);\n",
+    "  atlasStyle->SetPadTopMargin(0.05);\n",
+    "  atlasStyle->SetPadRightMargin(0.05); \n",
+    "  atlasStyle->SetPadBottomMargin(0.16);\n",
+    "  atlasStyle->SetPadLeftMargin(0.16); \n",
+    "  atlasStyle->SetTitleXOffset(1.4);\n",
+    "  atlasStyle->SetTitleYOffset(1.4);\n",
+    "  Int_t font=42; // Helvetica\n",
+    "  Double_t tsize=0.05;\n",
+    "  atlasStyle->SetTextFont(font);\n",
+    "  atlasStyle->SetTextSize(tsize);\n",
+    "  atlasStyle->SetLabelFont(font,\"x\");\n",
+    "  atlasStyle->SetTitleFont(font,\"x\");\n",
+    "  atlasStyle->SetLabelFont(font,\"y\");\n",
+    "  atlasStyle->SetTitleFont(font,\"y\");\n",
+    "  atlasStyle->SetLabelFont(font,\"z\");\n",
+    "  atlasStyle->SetTitleFont(font,\"z\");\n",
+    "  atlasStyle->SetLabelSize(tsize,\"x\");\n",
+    "  atlasStyle->SetTitleSize(tsize,\"x\");\n",
+    "  atlasStyle->SetLabelSize(tsize,\"y\");\n",
+    "  atlasStyle->SetTitleSize(tsize,\"y\");\n",
+    "  atlasStyle->SetLabelSize(tsize,\"z\");\n",
+    "  atlasStyle->SetTitleSize(tsize,\"z\");\n",
+    "  atlasStyle->SetMarkerStyle(20);\n",
+    "  atlasStyle->SetMarkerSize(1.2);\n",
+    "  atlasStyle->SetHistLineWidth(2.);\n",
+    "  atlasStyle->SetLineStyleString(2,\"[12 12]\"); // postscript dashes\n",
+    "  atlasStyle->SetEndErrorSize(0.);\n",
+    "  atlasStyle->SetOptTitle(0);\n",
+    "  atlasStyle->SetOptStat(0);\n",
+    "  atlasStyle->SetOptFit(0);\n",
+    "  atlasStyle->SetPadTickX(1);\n",
+    "  atlasStyle->SetPadTickY(1);\n",
+    "  gROOT->SetStyle(\"ATLAS\");\n",
+    "  gROOT->ForceStyle();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analisis."
    ]
   },
   {
@@ -392,7 +423,7 @@
     "      \n",
     "      //Preselection cut for electron/muon trigger\n",
     "      if(trigE || trigM)\n",
-    "\t{\n",
+    "      {\n",
     "\t  \n",
     "\t  // Preselection of good leptons\n",
     "\t  int goodlep_index[lep_n];\n",
@@ -470,8 +501,8 @@
     "\t\t  \n",
     "\t\t  // step-by-step\n",
     "\t\t  // opposite charge leptons\n",
-    "\t\t  if ( sum_charges == 0  ) \n",
-    "\t\t    {\n",
+    "        if ( sum_charges == 0  ) \n",
+    "            {\n",
     "\t\t      \n",
     "\t\t      \n",
     "\t\t      int sum_types  = lep_type->at(goodlep1_index) + lep_type->at(goodlep2_index) + lep_type->at(goodlep3_index) + lep_type->at(goodlep4_index) ;\n",
@@ -544,69 +575,67 @@
     "\t\t\t  if(delta_Z2 < delta_Z1) { InvMassZ1_min = InvMassZ2; InvMassZ2_min = InvMassZ1;}\n",
     "\t\t\t} // eemumu overe\n",
     "\t\t      \n",
-    "\t\t      if ( (sum_types == 44 || sum_types == 52 || sum_types == 48) )\n",
-    "\t\t\t{\n",
-    "\t\t\t  \n",
-    "\t\t\t  TLorentzVector FourLepSystem = TLorentzVector();\n",
-    "\t\t\t  FourLepSystem = Lepton_1 + Lepton_2 + Lepton_3 + Lepton_4;\n",
-    "\t\t\t  float FourLepSystem_M = FourLepSystem.Mag()/1000.;\n",
-    "\t\t\t  float FourLepSystem_pt = FourLepSystem.Pt()/1000.;\n",
-    "\t\t\t  float FourLepSystem_y = FourLepSystem.Rapidity();\n",
-    "\t\t\t \n",
+    "            if ( (sum_types == 44 || sum_types == 52 || sum_types == 48) )\n",
+    "                {\n",
+    "                TLorentzVector FourLepSystem = TLorentzVector();\n",
+    "                FourLepSystem = Lepton_1 + Lepton_2 + Lepton_3 + Lepton_4;\n",
+    "                float FourLepSystem_M = FourLepSystem.Mag()/1000.;\n",
+    "                float FourLepSystem_pt = FourLepSystem.Pt()/1000.;\n",
+    "                float FourLepSystem_y = FourLepSystem.Rapidity();\n",
+    "                \n",
+    "                \n",
+    "                //Preselection of good jets\n",
+    "                int goodjet_n = 0;\n",
+    "                int goodjet_index = 0;\n",
+    "                \n",
+    "                if (jet_n > 0)\n",
+    "                    {\n",
+    "                    for(unsigned int i=0; i<jet_n; i++)\n",
+    "                        {\n",
+    "                        if(jet_pt->at(i) > 30000. && TMath::Abs(jet_eta->at(i)) < 4.4)\n",
+    "                            {\n",
+    "                            goodjet_n++;\n",
+    "                            goodjet_index = i;\n",
+    "                            }\n",
+    "                        }\n",
+    "                    }\n",
     "\n",
-    "                          //Preselection of good jets\n",
-    "\t\t\t  int goodjet_n = 0;\n",
-    "\t\t\t  int goodjet_index = 0;\n",
-    "\t\t\t\t  \n",
-    "\t\t\t  if (jet_n > 0)\n",
-    "\t\t\t    {\n",
-    "\t\t\t      for(unsigned int i=0; i<jet_n; i++)\n",
-    "\t\t\t\t{\n",
-    "\t\t\t\t  if(jet_pt->at(i) > 30000. && TMath::Abs(jet_eta->at(i)) < 4.4)\n",
-    "\t\t\t\t    {\n",
-    "\t\t\t\t      goodjet_n++;\n",
-    "\t\t\t\t      goodjet_index = i;\n",
-    "\t\t\t\t    }\n",
-    "\t\t\t\t}\n",
-    "\t\t\t    }\n",
-    "\n",
-    "\t\t\t  \n",
-    "\t\t\t  //Start to fill histograms : definitions of x-axis variables\n",
-    "\t\t\t  double names_of_global_variable[]={InvMassZ1_min, InvMassZ2_min, FourLepSystem_pt, FourLepSystem_y, FourLepSystem_M, FourLepSystem_M,  (double)goodjet_n };\n",
-    "\t\t\t  \n",
-    "\t\t\t  double names_of_leadlep_variable[]={Lepton_1.Pt()/1000., Lepton_1.Eta(), Lepton_1.E()/1000., Lepton_1.Phi(), (double)lep_charge->at(goodlep1_index), (double)lep_type->at(goodlep1_index)};\n",
-    "\t\t\t  \n",
-    "\t\t\t  double names_of_secondlep_variable[]={Lepton_2.Pt()/1000., Lepton_2.Eta(), Lepton_2.E()/1000., Lepton_2.Phi(), (double)lep_charge->at(goodlep2_index), (double)lep_type->at(goodlep2_index)};\n",
-    "\t\t\t  \n",
-    "\t\t\t  double names_of_thirdlep_variable[]={Lepton_3.Pt()/1000., Lepton_3.Eta(), Lepton_3.E()/1000., Lepton_3.Phi(), (double)lep_charge->at(goodlep3_index), (double)lep_type->at(goodlep3_index)};\n",
-    "\t\t\t  \n",
-    "\t\t\t  double names_of_fourlep_variable[]={Lepton_4.Pt()/1000., Lepton_4.Eta(), Lepton_4.E()/1000., Lepton_4.Phi(), (double)lep_charge->at(goodlep4_index), (double)lep_type->at(goodlep4_index)};\n",
-    "\t\t\t  \n",
-    "\t\t\t  \n",
-    "\t\t\t  //Start to fill histograms : definitions of histogram names\n",
-    "\t\t\t  TString histonames_of_global_variable[]={\"hist_mLL1\",\"hist_mLL2\",\"hist_fourlepsys_pt\",\"hist_fourlepsys_y\",\"mass_ext_four_lep\", \"mass_four_lep\", \"hist_n_jets\"};\n",
-    "\t\t\t  \n",
-    "\t\t\t  TString histonames_of_lep_variable[]={\"hist_fourleptpt\", \"hist_fourlepteta\", \"hist_fourleptE\", \"hist_fourleptphi\", \"hist_fourleptch\", \"hist_fourleptID\"};\n",
-    "\t\t\t  \n",
-    "\t\t\t  //Start to fill histograms : find the histogram array length\n",
-    "\t\t\t  int length_global    = sizeof(names_of_global_variable)/sizeof(names_of_global_variable[0]);\n",
-    "\t\t\t  int length_leadlep   = sizeof(names_of_leadlep_variable)/sizeof(names_of_leadlep_variable[0]);\n",
-    "\t\t\t  \n",
-    "\t\t\t  for (int i=0; i<length_global; i++)\n",
-    "\t\t\t    {\n",
-    "\t\t\t      FillHistogramsGlobal( names_of_global_variable[i], weight, histonames_of_global_variable[i]);\n",
-    "\t\t\t    }\n",
-    "\t\t\t  \n",
-    "\t\t\t  for (int i=0; i<length_leadlep; i++)\n",
-    "\t\t\t    {\n",
-    "\t\t\t      FillHistogramsLeadlept( names_of_leadlep_variable[i], weight, histonames_of_lep_variable[i]);\n",
-    "\t\t\t      FillHistogramsLeadlept( names_of_secondlep_variable[i], weight, histonames_of_lep_variable[i]);\n",
-    "\t\t\t      FillHistogramsLeadlept( names_of_thirdlep_variable[i], weight, histonames_of_lep_variable[i]);\n",
-    "\t\t\t      FillHistogramsLeadlept( names_of_fourlep_variable[i], weight, histonames_of_lep_variable[i]);\n",
-    "\t\t\t    }\n",
-    "\t\t\t  \n",
-    "\t\t\t}\n",
-    "\t\t    }\n",
+    "            \n",
+    "                //Start to fill histograms : definitions of x-axis variables\n",
+    "                double names_of_global_variable[]={InvMassZ1_min, InvMassZ2_min, FourLepSystem_pt, FourLepSystem_y, FourLepSystem_M, FourLepSystem_M,  (double)goodjet_n };\n",
+    "                \n",
+    "                double names_of_leadlep_variable[]={Lepton_1.Pt()/1000., Lepton_1.Eta(), Lepton_1.E()/1000., Lepton_1.Phi(), (double)lep_charge->at(goodlep1_index), (double)lep_type->at(goodlep1_index)};\n",
+    "                \n",
+    "                double names_of_secondlep_variable[]={Lepton_2.Pt()/1000., Lepton_2.Eta(), Lepton_2.E()/1000., Lepton_2.Phi(), (double)lep_charge->at(goodlep2_index), (double)lep_type->at(goodlep2_index)};\n",
+    "                \n",
+    "                double names_of_thirdlep_variable[]={Lepton_3.Pt()/1000., Lepton_3.Eta(), Lepton_3.E()/1000., Lepton_3.Phi(), (double)lep_charge->at(goodlep3_index), (double)lep_type->at(goodlep3_index)};\n",
+    "                \n",
+    "                double names_of_fourlep_variable[]={Lepton_4.Pt()/1000., Lepton_4.Eta(), Lepton_4.E()/1000., Lepton_4.Phi(), (double)lep_charge->at(goodlep4_index), (double)lep_type->at(goodlep4_index)};\n",
+    "                \n",
+    "                \n",
+    "                //Start to fill histograms : definitions of histogram names\n",
+    "                TString histonames_of_global_variable[]={\"hist_mLL1\",\"hist_mLL2\",\"hist_fourlepsys_pt\",\"hist_fourlepsys_y\",\"mass_ext_four_lep\", \"mass_four_lep\", \"hist_n_jets\"};\n",
+    "                \n",
+    "                TString histonames_of_lep_variable[]={\"hist_fourleptpt\", \"hist_fourlepteta\", \"hist_fourleptE\", \"hist_fourleptphi\", \"hist_fourleptch\", \"hist_fourleptID\"};\n",
+    "                  \n",
+    "                //Start to fill histograms : find the histogram array length\n",
+    "                int length_global    = sizeof(names_of_global_variable)/sizeof(names_of_global_variable[0]);\n",
+    "                int length_leadlep   = sizeof(names_of_leadlep_variable)/sizeof(names_of_leadlep_variable[0]);\n",
+    "                \n",
+    "                for (int i=0; i<length_global; i++)\n",
+    "                    {\n",
+    "                    FillHistogramsGlobal(names_of_global_variable[i],weight,histonames_of_global_variable[i]);\n",
+    "                    }\n",
+    "                \n",
+    "                for (int i=0; i<length_leadlep; i++)\n",
+    "                    {\n",
+    "                    FillHistogramsLeadlept(names_of_leadlep_variable[i],weight, histonames_of_lep_variable[i]);\n",
+    "                    FillHistogramsLeadlept(names_of_secondlep_variable[i],weight, histonames_of_lep_variable[i]);\n",
+    "                    FillHistogramsLeadlept(names_of_thirdlep_variable[i],weight, histonames_of_lep_variable[i]);\n",
+    "                    FillHistogramsLeadlept(names_of_fourlep_variable[i],weight, histonames_of_lep_variable[i]);\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
     "\t\t}\n",
     "\t    }\n",
     "\t}\n",
@@ -617,28 +646,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "por ahora..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id=\"root_plot_1\"\n",
+       "     style=\"width: 396px; height: 372px\">\n",
+       "</div>\n",
+       "\n",
+       "<script>\n",
+       " requirejs.config({\n",
+       "     paths: {\n",
+       "       'JSRootCore' : 'https://root.cern.ch/js/notebook//scripts/JSRootCore',\n",
+       "     }\n",
+       "   });\n",
+       " require(['JSRootCore'],\n",
+       "     function(Core) {\n",
+       "       var obj = Core.JSONR_unref({\"_typename\":\"TCanvas\",\"fUniqueID\":0,\"fBits\":53673992,\"fLineColor\":1,\"fLineStyle\":1,\"fLineWidth\":1,\"fFillColor\":0,\"fFillStyle\":1001,\"fLeftMargin\":0.16,\"fRightMargin\":0.05,\"fBottomMargin\":0.16,\"fTopMargin\":0.05,\"fXfile\":2,\"fYfile\":2,\"fAfile\":1,\"fXstat\":0.99,\"fYstat\":0.99,\"fAstat\":2,\"fFrameFillColor\":0,\"fFrameLineColor\":1,\"fFrameFillStyle\":1001,\"fFrameLineStyle\":1,\"fFrameLineWidth\":1,\"fFrameBorderSize\":1,\"fFrameBorderMode\":0,\"fX1\":61.772152801256,\"fY1\":-0.21265821731868,\"fX2\":175.696202461808,\"fY2\":1.11645569538776,\"fXtoAbsPixelk\":-214.719954969835,\"fXtoPixelk\":-214.719954969835,\"fXtoPixel\":3.47600002966821,\"fYtoAbsPixelk\":312.480052439022,\"fYtoPixelk\":312.480052439022,\"fYtoPixel\":-279.885716674583,\"fUtoAbsPixelk\":5e-5,\"fUtoPixelk\":5e-5,\"fUtoPixel\":396,\"fVtoAbsPixelk\":372.00005,\"fVtoPixelk\":372,\"fVtoPixel\":-372,\"fAbsPixeltoXk\":61.772152801256,\"fPixeltoXk\":61.772152801256,\"fPixeltoX\":0.287686994092302,\"fAbsPixeltoYk\":1.11645569538776,\"fPixeltoYk\":-0.21265821731868,\"fPixeltoY\":-0.00357288686211407,\"fXlowNDC\":0,\"fYlowNDC\":0,\"fXUpNDC\":0,\"fYUpNDC\":0,\"fWNDC\":1,\"fHNDC\":1,\"fAbsXlowNDC\":0,\"fAbsYlowNDC\":0,\"fAbsWNDC\":1,\"fAbsHNDC\":1,\"fUxmin\":80,\"fUymin\":0,\"fUxmax\":170,\"fUymax\":1.05,\"fTheta\":30,\"fPhi\":30,\"fAspectRatio\":0,\"fNumber\":0,\"fTickx\":1,\"fTicky\":1,\"fLogx\":0,\"fLogy\":0,\"fLogz\":0,\"fPadPaint\":0,\"fCrosshair\":0,\"fCrosshairPos\":0,\"fBorderSize\":2,\"fBorderMode\":0,\"fModified\":false,\"fGridx\":false,\"fGridy\":false,\"fAbsCoord\":false,\"fEditable\":true,\"fFixedAspectRatio\":false,\"fPrimitives\":{\"_typename\":\"TList\",\"name\":\"TList\",\"arr\":[{\"_typename\":\"TFrame\",\"fUniqueID\":0,\"fBits\":50331656,\"fLineColor\":1,\"fLineStyle\":1,\"fLineWidth\":1,\"fFillColor\":0,\"fFillStyle\":1001,\"fX1\":80,\"fY1\":0,\"fX2\":170,\"fY2\":1.05,\"fBorderSize\":1,\"fBorderMode\":0},{\"_typename\":\"TH1F\",\"fUniqueID\":0,\"fBits\":50331656,\"fName\":\"mass_four_lep\",\"fTitle\":\"Mass of four-lepton system\",\"fLineColor\":602,\"fLineStyle\":1,\"fLineWidth\":1,\"fFillColor\":0,\"fFillStyle\":1001,\"fMarkerColor\":1,\"fMarkerStyle\":1,\"fMarkerSize\":1,\"fNcells\":26,\"fXaxis\":{\"_typename\":\"TAxis\",\"fUniqueID\":0,\"fBits\":50331648,\"fName\":\"xaxis\",\"fTitle\":\" m_{4l} [GeV]\",\"fNdivisions\":510,\"fAxisColor\":1,\"fLabelColor\":1,\"fLabelFont\":42,\"fLabelOffset\":0.005,\"fLabelSize\":0.035,\"fTickLength\":0.03,\"fTitleOffset\":1,\"fTitleSize\":0.035,\"fTitleColor\":1,\"fTitleFont\":42,\"fNbins\":24,\"fXmin\":80,\"fXmax\":170,\"fXbins\":[],\"fFirst\":0,\"fLast\":0,\"fBits2\":0,\"fTimeDisplay\":false,\"fTimeFormat\":\"\",\"fLabels\":null,\"fModLabs\":null},\"fYaxis\":{\"_typename\":\"TAxis\",\"fUniqueID\":0,\"fBits\":50331648,\"fName\":\"yaxis\",\"fTitle\":\"Events \\/ bin\",\"fNdivisions\":510,\"fAxisColor\":1,\"fLabelColor\":1,\"fLabelFont\":42,\"fLabelOffset\":0.005,\"fLabelSize\":0.035,\"fTickLength\":0.03,\"fTitleOffset\":0,\"fTitleSize\":0.035,\"fTitleColor\":1,\"fTitleFont\":42,\"fNbins\":1,\"fXmin\":0,\"fXmax\":1,\"fXbins\":[],\"fFirst\":0,\"fLast\":0,\"fBits2\":0,\"fTimeDisplay\":false,\"fTimeFormat\":\"\",\"fLabels\":null,\"fModLabs\":null},\"fZaxis\":{\"_typename\":\"TAxis\",\"fUniqueID\":0,\"fBits\":50331648,\"fName\":\"zaxis\",\"fTitle\":\"\",\"fNdivisions\":510,\"fAxisColor\":1,\"fLabelColor\":1,\"fLabelFont\":42,\"fLabelOffset\":0.005,\"fLabelSize\":0.035,\"fTickLength\":0.03,\"fTitleOffset\":1,\"fTitleSize\":0.035,\"fTitleColor\":1,\"fTitleFont\":42,\"fNbins\":1,\"fXmin\":0,\"fXmax\":1,\"fXbins\":[],\"fFirst\":0,\"fLast\":0,\"fBits2\":0,\"fTimeDisplay\":false,\"fTimeFormat\":\"\",\"fLabels\":null,\"fModLabs\":null},\"fBarOffset\":0,\"fBarWidth\":1000,\"fEntries\":0,\"fTsumw\":0,\"fTsumw2\":0,\"fTsumwx\":0,\"fTsumwx2\":0,\"fMaximum\":-1111,\"fMinimum\":-1111,\"fNormFactor\":0,\"fContour\":[],\"fSumw2\":[],\"fOption\":\"\",\"fFunctions\":{\"_typename\":\"TList\",\"name\":\"TList\",\"arr\":[],\"opt\":[]},\"fBufferSize\":0,\"fBuffer\":[],\"fBinStatErrOpt\":0,\"fStatOverflows\":2,\"fArray\":[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]}],\"opt\":[\"\",\"\"]},\"fExecs\":null,\"fName\":\"cz\",\"fTitle\":\"cz\",\"fNumPaletteColor\":0,\"fNextPaletteColor\":0,\"fDISPLAY\":\"$DISPLAY\",\"fDoubleBuffer\":0,\"fRetained\":true,\"fXsizeUser\":0,\"fYsizeUser\":0,\"fXsizeReal\":20,\"fYsizeReal\":20,\"fWindowTopX\":0,\"fWindowTopY\":0,\"fWindowWidth\":0,\"fWindowHeight\":0,\"fCw\":396,\"fCh\":372,\"fCatt\":{\"_typename\":\"TAttCanvas\",\"fXBetween\":2,\"fYBetween\":2,\"fTitleFromTop\":1.2,\"fXdate\":0.2,\"fYdate\":0.3,\"fAdate\":1},\"kMoveOpaque\":true,\"kResizeOpaque\":true,\"fHighLightColor\":2,\"fBatch\":true,\"kShowEventStatus\":false,\"kAutoExec\":true,\"kMenuBar\":true});\n",
+       "       Core.draw(\"root_plot_1\", obj, \"\");\n",
+       "     }\n",
+       " );\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "//void HZZAnalysis::SlaveTerminate()\n",
-    "//{\n",
-    "//}\n",
-    "\n",
-    "//void HZZAnalysis::Terminate()\n",
-    "//{\n",
-    "  // creating the output file\n",
-    "//  TString filename_option = GetOption();\n",
-    "//  printf(\"Writting with name option: %s \\n\", filename_option.Data());\n",
-    "//  TString output_name=\"Output_HZZAnalysis/\"+filename_option+\".root\";\n",
-    "//  const char* filename = output_name;\n",
-    " \n",
-    "//  TFile physicsoutput(filename,\"recreate\");\n",
-    "//  WriteHistograms();\n",
-    "//  physicsoutput.Close();\n",
-    "  \n",
-    "//}"
+    "TCanvas *cz = new TCanvas(\"cz\",\"cz\",10,10,400,400);\n",
+    "TText tz; tz.SetTextFont(42); tz.SetTextAlign(21);\n",
+    "mass_four_lep->Draw();\n",
+    "cz->Draw();"
    ]
   },
   {
